# libresidfp

./: Makefile.am  NEWS.md  README.md  configure.ac  libresidfp.pc.in
html/: Dac_8h_source.html  EnvelopeGenerator_8h_source.html  ExternalFilter_8h_source.html  Filter6581_8h_source.html  Filter8580_8h_source.html  FilterModelConfig6581_8h_source.html  FilterModelConfig8580_8h_source.html  FilterModelConfig_8h_source.html  Filter_8h_source.html  Integrator6581_8h_source.html  Integrator8580_8h_source.html  Integrator_8h_source.html  OpAmp_8h_source.html  Resampler_8h_source.html  SID_8h_source.html  SincResampler_8h_source.html  Spline_8h_source.html  TwoPassSincResampler_8h_source.html  Voice_8h_source.html  WaveformCalculator_8h_source.html  WaveformGenerator_8h_source.html  ZeroOrderResampler_8h_source.html  annotated.html  array_8h_source.html  classcounter-members.html  classcounter.html  classes.html  classmatrix-members.html  classmatrix.html  classreSIDfp_1_1Dac-members.html  classreSIDfp_1_1Dac.html  classreSIDfp_1_1EnvelopeGenerator-members.html  classreSIDfp_1_1EnvelopeGenerator.html  classreSIDfp_1_1ExternalFilter-members.html  classreSIDfp_1_1ExternalFilter.html  classreSIDfp_1_1Filter-members.html  classreSIDfp_1_1Filter.html  classreSIDfp_1_1Filter6581-members.html  classreSIDfp_1_1Filter6581.html  classreSIDfp_1_1FilterModelConfig-members.html  (+85 more)
src/: Dac.h  ExternalFilter.h  Filter.h  Filter6581.h  Filter8580.h  SID.cpp  (+8 more)
tests/: Makefile.am  Makefile.in  TestDac.cpp  TestEnvelopeGenerator.cpp  TestResampler.cpp  TestSpline.cpp  TestWaveformGenerator.cpp
(+6 files in other folders)
